--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 html {
@@ -12,61 +12,61 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
-  color: #fff;
-  background-color: #0F1626;
+  font-family: 'Press Start 2P', sans-serif;
+  color: #eee;
+  background-color: #222;
+  /* background-color: #60b347; */
 }
 
 /* LAYOUT */
 header {
   position: relative;
   height: 35vh;
-  background-color: #163C64;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  border-bottom: 7px solid #eee;
 }
 
 main {
   height: 65vh;
+  color: #eee;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  padding: 0 5rem;
 }
 
 .left {
-  max-width: 50rem;
+  width: 52rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .right {
-  max-width: 50rem;
+  width: 52rem;
   font-size: 2rem;
 }
 
 /* ELEMENTS STYLE */
 h1 {
-  font-size: 6rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 2rem;
+  font-size: 4rem;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .animal {
-  background: #00A5C4;
-  color: #fff;
-  font-size: 8rem;
-  width: 80rem;
-  height: 20rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50% 50% 0 0;
+  background: #eee;
+  color: #333;
+  font-size: 6rem;
+  width: 20rem;
+  padding: 3rem 0rem;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
 
 .between {
@@ -80,75 +80,41 @@ h1 {
   position: absolute;
   top: 2rem;
   left: 2rem;
-  background-color: #00A5C4;
-  color: #fff;
-  border-radius: 1rem;
-  font-size: 2rem;
-  padding: 1rem 2rem;
-  cursor: pointer;
-}
-
-.again:hover {
-  background-color: #1C8BBF;
 }
 
 .guess {
   background: none;
-  border: 2px solid #163C64;
+  border: 4px solid #eee;
   font-family: inherit;
   color: inherit;
-  font-size: 5rem;
-  padding: 1rem;
-  width: 25rem;
+  font-size: 4rem;
+  padding: 2.5rem;
+  width: 45rem;
   text-align: center;
   display: block;
-  margin-bottom: 2rem;
-  border-radius: 1rem;
+  margin-bottom: 3rem;
 }
 
-.check {
-  background-color: #00A5C4;
-  color: #fff;
-  border-radius: 1rem;
+.btn {
+  border: none;
+  background-color: #eee;
+  color: #222;
   font-size: 2rem;
-  padding: 1rem 2rem;
+  font-family: inherit;
+  padding: 2rem 3rem;
   cursor: pointer;
 }
 
-.check:hover {
-  background-color: #1C8BBF;
+.btn:hover {
+  background-color: #ccc;
 }
 
 .message {
-  font-size: 2.4rem;
-  margin-bottom: 2rem;
+  margin-bottom: 6rem;
+  height: 3rem;
 }
 
 .label-score {
-  font-size: 2.4rem;
-  margin-bottom: 1rem;
-  display: flex;
-  align-items: center;
+  margin-bottom: 2rem;
 }
 
-.label-score span {
-  margin-left: 1rem;
-}
-
-.label-highscore {
-  font-size: 2.4rem;
-  display: flex;
-  align-items: center;
-}
-
-.label-highscore span {
-  margin-left: 1rem;
-}
-
-@media screen and (max-width: 768px) {
-  header {
-    height: 25vh;
-  }
-
-  main {
-    height: 75vh;
